src/observer/sql/parser/yacc_sql.output
Grammar

    0 $accept: commands $end

    1 commands: command_wrapper opt_semicolon

    2 command_wrapper: calc_stmt
    3                | select_stmt
    4                | insert_stmt
    5                | update_stmt
    6                | delete_stmt
    7                | create_table_stmt
    8                | drop_table_stmt
    9                | show_tables_stmt
   10                | desc_table_stmt
   11                | create_index_stmt
   12                | drop_index_stmt
   13                | sync_stmt
   14                | begin_stmt
   15                | commit_stmt
   16                | rollback_stmt
   17                | load_data_stmt
   18                | explain_stmt
   19                | set_variable_stmt
   20                | help_stmt
   21                | exit_stmt

   22 exit_stmt: EXIT

   23 help_stmt: HELP

   24 sync_stmt: SYNC

   25 begin_stmt: TRX_BEGIN

   26 commit_stmt: TRX_COMMIT

   27 rollback_stmt: TRX_ROLLBACK

   28 drop_table_stmt: DROP TABLE ID

   29 show_tables_stmt: SHOW TABLES

   30 desc_table_stmt: DESC ID

   31 create_index_stmt: CREATE INDEX ID ON ID LBRACE rel_list RBRACE
   32                  | CREATE UNIQUE INDEX ID ON ID LBRACE rel_list RBRACE

   33 drop_index_stmt: DROP INDEX ID ON ID

   34 create_table_stmt: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE storage_format
   35                  | CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE storage_format select_stmt
   36                  | CREATE TABLE ID AS select_stmt

   37 attr_def_list: ε
   38              | COMMA attr_def attr_def_list

   39 attr_def: ID type LBRACE number RBRACE nullable_spec
   40         | ID type nullable_spec

   41 nullable_spec: NULL_T
   42              | NOT_NULL_T
   43              | ε

   44 number: NUMBER

   45 type: INT_T
   46     | STRING_T
   47     | FLOAT_T
   48     | VECTOR_T
   49     | DATE_T

   50 insert_stmt: INSERT INTO ID VALUES LBRACE value value_list RBRACE

   51 value_list: ε
   52           | COMMA value value_list

   53 value: NUMBER
   54      | FLOAT
   55      | SSS
   56      | DATE
   57      | LBRACKET vector_elem vector_value_list RBRACKET
   58      | NULL_T

   59 vector_elem: NUMBER
   60            | FLOAT

   61 vector_value_list: ε
   62                  | COMMA vector_elem vector_value_list

   63 storage_format: ε
   64               | STORAGE FORMAT EQ ID

   65 delete_stmt: DELETE FROM ID where

   66 update_stmt: UPDATE ID SET set_clause_list where

   67 set_clause_list: set_clause
   68                | set_clause COMMA set_clause_list

   69 set_clause: ID EQ value
   70           | ID EQ LBRACE select_stmt RBRACE

   71 select_stmt: SELECT expression_list FROM rel_list join_list where group_by having order_by

   72 order_by: ε
   73         | ORDER_BY order_by_list

   74 order_by_list: order_by_item
   75              | order_by_item COMMA order_by_list

   76 order_by_item: rel_attr asc_desc

   77 asc_desc: ε
   78         | ASC
   79         | DESC

   80 calc_stmt: CALC expression_list

   81 expression_list: expression
   82                | expression AS ID
   83                | expression COMMA expression_list
   84                | expression AS ID COMMA expression_list

   85 expression: expression '+' expression
   86           | expression '-' expression
   87           | expression '*' expression
   88           | expression '/' expression
   89           | LBRACE expression RBRACE
   90           | L2_DISTANCE LBRACE expression COMMA expression RBRACE
   91           | COSINE_DISTANCE LBRACE expression COMMA expression RBRACE
   92           | INNER_PRODUCT LBRACE expression COMMA expression RBRACE
   93           | '-' expression
   94           | value
   95           | rel_attr
   96           | '*'
   97           | MAX LBRACE agg_fun_attr_list RBRACE
   98           | MIN LBRACE agg_fun_attr_list RBRACE
   99           | COUNT LBRACE agg_fun_attr_list RBRACE
  100           | AVG LBRACE agg_fun_attr_list RBRACE
  101           | SUM LBRACE agg_fun_attr_list RBRACE

  102 agg_fun_attr_list: agg_fun_attr
  103                  | agg_fun_attr COMMA agg_fun_attr_list

  104 agg_fun_attr: ε
  105             | '*'
  106             | rel_attr

  107 rel_attr: ID
  108         | ID DOT ID

  109 relation: ID

  110 rel_list: relation
  111         | relation COMMA rel_list

  112 join_list: ε
  113          | join join_list

  114 join: INNER JOIN relation ON condition_list

  115 where: ε
  116      | WHERE condition_list

  117 condition_list: ε
  118               | condition
  119               | condition AND condition_list

  120 condition: expression comp_op expression
  121          | expression comp_op LBRACE select_stmt RBRACE
  122          | expression IN_T LBRACE select_stmt RBRACE
  123          | expression NOT IN_T LBRACE select_stmt RBRACE
  124          | expression IN_T LBRACE value value_list RBRACE
  125          | expression NOT IN_T LBRACE value value_list RBRACE
  126          | EXISTS_T LBRACE select_stmt RBRACE
  127          | NOT EXISTS_T LBRACE select_stmt RBRACE
  128          | LBRACE select_stmt RBRACE comp_op expression
  129          | LBRACE select_stmt RBRACE comp_op LBRACE select_stmt RBRACE

  130 comp_op: EQ
  131        | LT
  132        | GT
  133        | LE
  134        | GE
  135        | NE
  136        | LK
  137        | NLK
  138        | IS_T
  139        | IS_NOT_T

  140 group_by: ε
  141         | GROUP BY expression_list

  142 having: ε
  143       | HAVING condition_list

  144 load_data_stmt: LOAD DATA INFILE SSS INTO TABLE ID

  145 explain_stmt: EXPLAIN command_wrapper

  146 set_variable_stmt: SET ID EQ value

  147 opt_semicolon: ε
  148              | SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 87 96 105
    '+' (43) 85
    '-' (45) 86 93
    '/' (47) 88
    error (256)
    SEMICOLON (258) 148
    BY (259) 141
    CREATE (260) 31 32 34 35 36
    DROP (261) 28 33
    GROUP (262) 141
    HAVING (263) 143
    TABLE (264) 28 34 35 36 144
    TABLES (265) 29
    INDEX (266) 31 32 33
    CALC (267) 80
    SELECT (268) 71
    DESC (269) 30 79
    SHOW (270) 29
    SYNC (271) 24
    INSERT (272) 50
    DELETE (273) 65
    UPDATE (274) 66
    LBRACE (275) 31 32 34 35 39 50 70 89 90 91 92 97 98 99 100 101 121 122 123 124 125 126 127 128 129
    RBRACE (276) 31 32 34 35 39 50 70 89 90 91 92 97 98 99 100 101 121 122 123 124 125 126 127 128 129
    COMMA (277) 38 52 62 68 75 83 84 90 91 92 103 111
    TRX_BEGIN (278) 25
    TRX_COMMIT (279) 26
    TRX_ROLLBACK (280) 27
    INT_T (281) 45
    STRING_T (282) 46
    FLOAT_T (283) 47
    VECTOR_T (284) 48
    DATE_T (285) 49
    HELP (286) 23
    EXIT (287) 22
    DOT (288) 108
    INTO (289) 50 144
    VALUES (290) 50
    FROM (291) 65 71
    WHERE (292) 116
    AND (293) 119
    SET (294) 66 146
    ON (295) 31 32 33 114
    LOAD (296) 144
    DATA (297) 144
    INFILE (298) 144
    EXPLAIN (299) 145
    STORAGE (300) 64
    FORMAT (301) 64
    EQ (302) 64 69 70 130 146
    LT (303) 131
    GT (304) 132
    LE (305) 133
    GE (306) 134
    NE (307) 135
    LK (308) 136
    NLK (309) 137
    IS_T (310) 138
    IS_NOT_T (311) 139
    MAX (312) 97
    MIN (313) 98
    COUNT (314) 99
    AVG (315) 100
    SUM (316) 101
    INNER (317) 114
    JOIN (318) 114
    UNIQUE (319) 32
    LBRACKET (320) 57
    RBRACKET (321) 57
    L2_DISTANCE (322) 90
    COSINE_DISTANCE (323) 91
    INNER_PRODUCT (324) 92
    EXISTS_T (325) 126 127
    NOT (326) 123 125 127
    IN_T (327) 122 123 124 125
    NULL_T (328) 41 58
    NOT_NULL_T (329) 42
    ORDER_BY (330) 73
    ASC (331) 78
    AS (332) 36 82 84
    NUMBER <number> (333) 44 53 59
    FLOAT <floats> (334) 54 60
    ID <string> (335) 28 30 31 32 33 34 35 36 39 40 50 64 65 66 69 70 82 84 107 108 109 144 146
    SSS <string> (336) 55 144
    DATE <string> (337) 56
    UMINUS (338)


Nonterminals, with rules where they appear

    $accept (88)
        on left: 0
    commands <sql_node> (89)
        on left: 1
        on right: 0
    command_wrapper <sql_node> (90)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 1 145
    exit_stmt <sql_node> (91)
        on left: 22
        on right: 21
    help_stmt <sql_node> (92)
        on left: 23
        on right: 20
    sync_stmt <sql_node> (93)
        on left: 24
        on right: 13
    begin_stmt <sql_node> (94)
        on left: 25
        on right: 14
    commit_stmt <sql_node> (95)
        on left: 26
        on right: 15
    rollback_stmt <sql_node> (96)
        on left: 27
        on right: 16
    drop_table_stmt <sql_node> (97)
        on left: 28
        on right: 8
    show_tables_stmt <sql_node> (98)
        on left: 29
        on right: 9
    desc_table_stmt <sql_node> (99)
        on left: 30
        on right: 10
    create_index_stmt <sql_node> (100)
        on left: 31 32
        on right: 11
    drop_index_stmt <sql_node> (101)
        on left: 33
        on right: 12
    create_table_stmt <sql_node> (102)
        on left: 34 35 36
        on right: 7
    attr_def_list <attr_infos> (103)
        on left: 37 38
        on right: 34 35 38
    attr_def <attr_info> (104)
        on left: 39 40
        on right: 34 35 38
    nullable_spec <nullable_spec> (105)
        on left: 41 42 43
        on right: 39 40
    number <number> (106)
        on left: 44
        on right: 39
    type <number> (107)
        on left: 45 46 47 48 49
        on right: 39 40
    insert_stmt <sql_node> (108)
        on left: 50
        on right: 4
    value_list <value_list> (109)
        on left: 51 52
        on right: 50 52 124 125
    value <value> (110)
        on left: 53 54 55 56 57 58
        on right: 50 52 69 94 124 125 146
    vector_elem <floats> (111)
        on left: 59 60
        on right: 57 62
    vector_value_list <vector_elem_list> (112)
        on left: 61 62
        on right: 57 62
    storage_format <string> (113)
        on left: 63 64
        on right: 34 35
    delete_stmt <sql_node> (114)
        on left: 65
        on right: 6
    update_stmt <sql_node> (115)
        on left: 66
        on right: 5
    set_clause_list <set_clause_list> (116)
        on left: 67 68
        on right: 66 68
    set_clause <set_clause> (117)
        on left: 69 70
        on right: 67 68
    select_stmt <sql_node> (118)
        on left: 71
        on right: 3 35 36 70 121 122 123 126 127 128 129
    order_by <order_by_list> (119)
        on left: 72 73
        on right: 71
    order_by_list <order_by_list> (120)
        on left: 74 75
        on right: 73 75
    order_by_item <order_by_item> (121)
        on left: 76
        on right: 74 75
    asc_desc <asc_desc> (122)
        on left: 77 78 79
        on right: 76
    calc_stmt <sql_node> (123)
        on left: 80
        on right: 2
    expression_list <expression_list> (124)
        on left: 81 82 83 84
        on right: 71 80 83 84 141
    expression <expression> (125)
        on left: 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
        on right: 81 82 83 84 85 86 87 88 89 90 91 92 93 120 121 122 123 124 125 128
    agg_fun_attr_list <expression> (126)
        on left: 102 103
        on right: 97 98 99 100 101 103
    agg_fun_attr <expression> (127)
        on left: 104 105 106
        on right: 102 103
    rel_attr <rel_attr> (128)
        on left: 107 108
        on right: 76 95 106
    relation <string> (129)
        on left: 109
        on right: 110 111 114
    rel_list <relation_list> (130)
        on left: 110 111
        on right: 31 32 71 111
    join_list <join_tuple_list> (131)
        on left: 112 113
        on right: 71 113
    join <join_tuple> (132)
        on left: 114
        on right: 113
    where <condition_list> (133)
        on left: 115 116
        on right: 65 66 71
    condition_list <condition_list> (134)
        on left: 117 118 119
        on right: 114 116 119 143
    condition <condition> (135)
        on left: 120 121 122 123 124 125 126 127 128 129
        on right: 118 119
    comp_op <comp> (136)
        on left: 130 131 132 133 134 135 136 137 138 139
        on right: 120 121 128 129
    group_by <expression_list> (137)
        on left: 140 141
        on right: 71
    having <condition_list> (138)
        on left: 142 143
        on right: 71
    load_data_stmt <sql_node> (139)
        on left: 144
        on right: 17
    explain_stmt <sql_node> (140)
        on left: 145
        on right: 18
    set_variable_stmt <sql_node> (141)
        on left: 146
        on right: 19
    opt_semicolon (142)
        on left: 147 148
        on right: 1


State 0

    0 $accept: • commands $end

    CREATE        shift, and go to state 1
    DROP          shift, and go to state 2
    CALC          shift, and go to state 3
    SELECT        shift, and go to state 4
    DESC          shift, and go to state 5
    SHOW          shift, and go to state 6
    SYNC          shift, and go to state 7
    INSERT        shift, and go to state 8
    DELETE        shift, and go to state 9
    UPDATE        shift, and go to state 10
    TRX_BEGIN     shift, and go to state 11
    TRX_COMMIT    shift, and go to state 12
    TRX_ROLLBACK  shift, and go to state 13
    HELP          shift, and go to state 14
    EXIT          shift, and go to state 15
    SET           shift, and go to state 16
    LOAD          shift, and go to state 17
    EXPLAIN       shift, and go to state 18

    commands           go to state 19
    command_wrapper    go to state 20
    exit_stmt          go to state 21
    help_stmt          go to state 22
    sync_stmt          go to state 23
    begin_stmt         go to state 24
    commit_stmt        go to state 25
    rollback_stmt      go to state 26
    drop_table_stmt    go to state 27
    show_tables_stmt   go to state 28
    desc_table_stmt    go to state 29
    create_index_stmt  go to state 30
    drop_index_stmt    go to state 31
    create_table_stmt  go to state 32
    insert_stmt        go to state 33
    delete_stmt        go to state 34
    update_stmt        go to state 35
    select_stmt        go to state 36
    calc_stmt          go to state 37
    load_data_stmt     go to state 38
    explain_stmt       go to state 39
    set_variable_stmt  go to state 40


State 1

   31 create_index_stmt: CREATE • INDEX ID ON ID LBRACE rel_list RBRACE
   32                  | CREATE • UNIQUE INDEX ID ON ID LBRACE rel_list RBRACE
   34 create_table_stmt: CREATE • TABLE ID LBRACE attr_def attr_def_list RBRACE storage_format
   35                  | CREATE • TABLE ID LBRACE attr_def attr_def_list RBRACE storage_format select_stmt
   36                  | CREATE • TABLE ID AS select_stmt

    TABLE   shift, and go to state 41
    INDEX   shift, and go to state 42
    UNIQUE  shift, and go to state 43


State 2

   28 drop_table_stmt: DROP • TABLE ID
   33 drop_index_stmt: DROP • INDEX ID ON ID

    TABLE  shift, and go to state 44
    INDEX  shift, and go to state 45


State 3

   80 calc_stmt: CALC • expression_list

    LBRACE           shift, and go to state 46
    MAX              shift, and go to state 47
    MIN              shift, and go to state 48
    COUNT            shift, and go to state 49
    AVG              shift, and go to state 50
    SUM              shift, and go to state 51
    LBRACKET         shift, and go to state 52
    L2_DISTANCE      shift, and go to state 53
    COSINE_DISTANCE  shift, and go to state 54
    INNER_PRODUCT    shift, and go to state 55
    NULL_T           shift, and go to state 56
    NUMBER           shift, and go to state 57
    FLOAT            shift, and go to state 58
    ID               shift, and go to state 59
    SSS              shift, and go to state 60
    DATE             shift, and go to state 61
    '-'              shift, and go to state 62
    '*'              shift, and go to state 63

    value            go to state 64
    expression_list  go to state 65
    expression       go to state 66
    rel_attr         go to state 67


State 4

   71 select_stmt: SELECT • expression_list FROM rel_list join_list where group_by having order_by

    LBRACE           shift, and go to state 46
    MAX              shift, and go to state 47
    MIN              shift, and go to state 48
    COUNT            shift, and go to state 49
    AVG              shift, and go to state 50
    SUM              shift, and go to state 51
    LBRACKET         shift, and go to state 52
    L2_DISTANCE      shift, and go to state 53
    COSINE_DISTANCE  shift, and go to state 54
    INNER_PRODUCT    shift, and go to state 55
    NULL_T           shift, and go to state 56
    NUMBER           shift, and go to state 57
    FLOAT            shift, and go to state 58
    ID               shift, and go to state 59
    SSS              shift, and go to state 60
    DATE             shift, and go to state 61
    '-'              shift, and go to state 62
    '*'              shift, and go to state 63

    value            go to state 64
    expression_list  go to state 68
    expression       go to state 66
    rel_attr         go to state 67


State 5

   30 desc_table_stmt: DESC • ID

    ID  shift, and go to state 69


State 6

   29 show_tables_stmt: SHOW • TABLES

    TABLES  shift, and go to state 70


State 7

   24 sync_stmt: SYNC •

    $default  reduce using rule 24 (sync_stmt)


State 8

   50 insert_stmt: INSERT • INTO ID VALUES LBRACE value value_list RBRACE

    INTO  shift, and go to state 71


State 9

   65 delete_stmt: DELETE • FROM ID where

    FROM  shift, and go to state 72


State 10

   66 update_stmt: UPDATE • ID SET set_clause_list where

    ID  shift, and go to state 73


State 11

   25 begin_stmt: TRX_BEGIN •

    $default  reduce using rule 25 (begin_stmt)


State 12

   26 commit_stmt: TRX_COMMIT •

    $default  reduce using rule 26 (commit_stmt)


State 13

   27 rollback_stmt: TRX_ROLLBACK •

    $default  reduce using rule 27 (rollback_stmt)


State 14

   23 help_stmt: HELP •

    $default  reduce using rule 23 (help_stmt)


State 15

   22 exit_stmt: EXIT •

    $default  reduce using rule 22 (exit_stmt)


State 16

  146 set_variable_stmt: SET • ID EQ value

    ID  shift, and go to state 74


State 17

  144 load_data_stmt: LOAD • DATA INFILE SSS INTO TABLE ID

    DATA  shift, and go to state 75


State 18

  145 explain_stmt: EXPLAIN • command_wrapper

    CREATE        shift, and go to state 1
    DROP          shift, and go to state 2
    CALC          shift, and go to state 3
    SELECT        shift, and go to state 4
    DESC          shift, and go to state 5
    SHOW          shift, and go to state 6
    SYNC          shift, and go to state 7
    INSERT        shift, and go to state 8
    DELETE        shift, and go to state 9
    UPDATE        shift, and go to state 10
    TRX_BEGIN     shift, and go to state 11
    TRX_COMMIT    shift, and go to state 12
    TRX_ROLLBACK  shift, and go to state 13
    HELP          shift, and go to state 14
    EXIT          shift, and go to state 15
    SET           shift, and go to state 16
    LOAD          shift, and go to state 17
    EXPLAIN       shift, and go to state 18

    command_wrapper    go to state 76
    exit_stmt          go to state 21
    help_stmt          go to state 22
    sync_stmt          go to state 23
    begin_stmt         go to state 24
    commit_stmt        go to state 25
    rollback_stmt      go to state 26
    drop_table_stmt    go to state 27
    show_tables_stmt   go to state 28
    desc_table_stmt    go to state 29
    create_index_stmt  go to state 30
    drop_index_stmt    go to state 31
    create_table_stmt  go to state 32
    insert_stmt        go to state 33
    delete_stmt        go to state 34
    update_stmt        go to state 35
    select_stmt        go to state 36
    calc_stmt          go to state 37
    load_data_stmt     go to state 38
    explain_stmt       go to state 39
    set_variable_stmt  go to state 40


State 19

    0 $accept: commands • $end

    $end  shift, and go to state 77


State 20

    1 commands: command_wrapper • opt_semicolon

    SEMICOLON  shift, and go to state 78

    $default  reduce using rule 147 (opt_semicolon)

    opt_semicolon  go to state 79


State 21

   21 command_wrapper: exit_stmt •

    $default  reduce using rule 21 (command_wrapper)


State 22

   20 command_wrapper: help_stmt •

    $default  reduce using rule 20 (command_wrapper)


State 23

   13 command_wrapper: sync_stmt •

    $default  reduce using rule 13 (command_wrapper)


State 24

   14 command_wrapper: begin_stmt •

    $default  reduce using rule 14 (command_wrapper)


State 25

   15 command_wrapper: commit_stmt •

    $default  reduce using rule 15 (command_wrapper)


State 26

   16 command_wrapper: rollback_stmt •

    $default  reduce using rule 16 (command_wrapper)


State 27

    8 command_wrapper: drop_table_stmt •

    $default  reduce using rule 8 (command_wrapper)


State 28

    9 command_wrapper: show_tables_stmt •

    $default  reduce using rule 9 (command_wrapper)


State 29

   10 command_wrapper: desc_table_stmt •

    $default  reduce using rule 10 (command_wrapper)


State 30

   11 command_wrapper: create_index_stmt •

    $default  reduce using rule 11 (command_wrapper)


State 31

   12 command_wrapper: drop_index_stmt •

    $default  reduce using rule 12 (command_wrapper)


State 32

    7 command_wrapper: create_table_stmt •

    $default  reduce using rule 7 (command_wrapper)


State 33

    4 command_wrapper: insert_stmt •

    $default  reduce using rule 4 (command_wrapper)


State 34

    6 command_wrapper: delete_stmt •

    $default  reduce using rule 6 (command_wrapper)


State 35

    5 command_wrapper: update_stmt •

    $default  reduce using rule 5 (command_wrapper)


State 36

    3 command_wrapper: select_stmt •

    $default  reduce using rule 3 (command_wrapper)


State 37

    2 command_wrapper: calc_stmt •

    $default  reduce using rule 2 (command_wrapper)


State 38

   17 command_wrapper: load_data_stmt •

    $default  reduce using rule 17 (command_wrapper)


State 39

   18 command_wrapper: explain_stmt •

    $default  reduce using rule 18 (command_wrapper)


State 40

   19 command_wrapper: set_variable_stmt •

    $default  reduce using rule 19 (command_wrapper)


State 41

   34 create_table_stmt: CREATE TABLE • ID LBRACE attr_def attr_def_list RBRACE storage_format
   35                  | CREATE TABLE • ID LBRACE attr_def attr_def_list RBRACE storage_format select_stmt
   36                  | CREATE TABLE • ID AS select_stmt

    ID  shift, and go to state 80


State 42

   31 create_index_stmt: CREATE INDEX • ID ON ID LBRACE rel_list RBRACE

    ID  shift, and go to state 81


State 43

   32 create_index_stmt: CREATE UNIQUE • INDEX ID ON ID LBRACE rel_list RBRACE

    INDEX  shift, and go to state 82


State 44

   28 drop_table_stmt: DROP TABLE • ID

    ID  shift, and go to state 83


State 45

   33 drop_index_stmt: DROP INDEX • ID ON ID

    ID  shift, and go to state 84


State 46

   89 expression: LBRACE • expression RBRACE

    LBRACE           shift, and go to state 46
    MAX              shift, and go to state 47
    MIN              shift, and go to state 48
    COUNT            shift, and go to state 49
    AVG              shift, and go to state 50
    SUM              shift, and go to state 51
    LBRACKET         shift, and go to state 52
    L2_DISTANCE      shift, and go to state 53
    COSINE_DISTANCE  shift, and go to state 54
    INNER_PRODUCT    shift, and go to state 55
    NULL_T           shift, and go to state 56
    NUMBER           shift, and go to state 57
    FLOAT            shift, and go to state 58
    ID               shift, and go to state 59
    SSS              shift, and go to state 60
    DATE             shift, and go to state 61
    '-'              shift, and go to state 62
    '*'              shift, and go to state 63

    value       go to state 64
    expression  go to state 85
    rel_attr    go to state 67


State 47

   97 expression: MAX • LBRACE agg_fun_attr_list RBRACE

    LBRACE  shift, and go to state 86


State 48

   98 expression: MIN • LBRACE agg_fun_attr_list RBRACE

    LBRACE  shift, and go to state 87


State 49

   99 expression: COUNT • LBRACE agg_fun_attr_list RBRACE

    LBRACE  shift, and go to state 88


State 50

  100 expression: AVG • LBRACE agg_fun_attr_list RBRACE

    LBRACE  shift, and go to state 89


State 51

  101 expression: SUM • LBRACE agg_fun_attr_list RBRACE

    LBRACE  shift, and go to state 90


State 52

   57 value: LBRACKET • vector_elem vector_value_list RBRACKET

    NUMBER  shift, and go to state 91
    FLOAT   shift, and go to state 92

    vector_elem  go to state 93


State 53

   90 expression: L2_DISTANCE • LBRACE expression COMMA expression RBRACE

    LBRACE  shift, and go to state 94


State 54

   91 expression: COSINE_DISTANCE • LBRACE expression COMMA expression RBRACE

    LBRACE  shift, and go to state 95


State 55

   92 expression: INNER_PRODUCT • LBRACE expression COMMA expression RBRACE

    LBRACE  shift, and go to state 96


State 56

   58 value: NULL_T •

    $default  reduce using rule 58 (value)


State 57

   53 value: NUMBER •

    $default  reduce using rule 53 (value)


State 58

   54 value: FLOAT •

    $default  reduce using rule 54 (value)


State 59

  107 rel_attr: ID •
  108         | ID • DOT ID

    DOT  shift, and go to state 97

    $default  reduce using rule 107 (rel_attr)


State 60

   55 value: SSS •

    $default  reduce using rule 55 (value)


State 61

   56 value: DATE •

    $default  reduce using rule 56 (value)


State 62

   93 expression: '-' • expression

    LBRACE           shift, and go to state 46
    MAX              shift, and go to state 47
    MIN              shift, and go to state 48
    COUNT            shift, and go to state 49
    AVG              shift, and go to state 50
    SUM              shift, and go to state 51
    LBRACKET         shift, and go to state 52
    L2_DISTANCE      shift, and go to state 53
    COSINE_DISTANCE  shift, and go to state 54
    INNER_PRODUCT    shift, and go to state 55
    NULL_T           shift, and go to state 56
    NUMBER           shift, and go to state 57
    FLOAT            shift, and go to state 58
    ID               shift, and go to state 59
    SSS              shift, and go to state 60
    DATE             shift, and go to state 61
    '-'              shift, and go to state 62
    '*'              shift, and go to state 63

    value       go to state 64
    expression  go to state 98
    rel_attr    go to state 67


State 63

   96 expression: '*' •

    $default  reduce using rule 96 (expression)


State 64

   94 expression: value •

    $default  reduce using rule 94 (expression)


State 65

   80 calc_stmt: CALC expression_list •

    $default  reduce using rule 80 (calc_stmt)


State 66

   81 expression_list: expression •
   82                | expression • AS ID
   83                | expression • COMMA expression_list
   84                | expression • AS ID COMMA expression_list
   85 expression: expression • '+' expression
   86           | expression • '-' expression
   87           | expression • '*' expression
   88           | expression • '/' expression

    COMMA  shift, and go to state 99
    AS     shift, and go to state 100
    '+'    shift, and go to state 101
    '-'    shift, and go to state 102
    '*'    shift, and go to state 103
    '/'    shift, and go to state 104

    $default  reduce using rule 81 (expression_list)


State 67

   95 expression: rel_attr •

    $default  reduce using rule 95 (expression)


State 68

   71 select_stmt: SELECT expression_list • FROM rel_list join_list where group_by having order_by

    FROM  shift, and go to state 105


State 69

   30 desc_table_stmt: DESC ID •

    $default  reduce using rule 30 (desc_table_stmt)


State 70

   29 show_tables_stmt: SHOW TABLES •

    $default  reduce using rule 29 (show_tables_stmt)


State 71

   50 insert_stmt: INSERT INTO • ID VALUES LBRACE value value_list RBRACE

    ID  shift, and go to state 106


State 72

   65 delete_stmt: DELETE FROM • ID where

    ID  shift, and go to state 107


State 73

   66 update_stmt: UPDATE ID • SET set_clause_list where

    SET  shift, and go to state 108


State 74

  146 set_variable_stmt: SET ID • EQ value

    EQ  shift, and go to state 109


State 75

  144 load_data_stmt: LOAD DATA • INFILE SSS INTO TABLE ID

    INFILE  shift, and go to state 110


State 76

  145 explain_stmt: EXPLAIN command_wrapper •

    $default  reduce using rule 145 (explain_stmt)


State 77

    0 $accept: commands $end •

    $default  accept


State 78

  148 opt_semicolon: SEMICOLON •

    $default  reduce using rule 148 (opt_semicolon)


State 79

    1 commands: command_wrapper opt_semicolon •

    $default  reduce using rule 1 (commands)


State 80

   34 create_table_stmt: CREATE TABLE ID • LBRACE attr_def attr_def_list RBRACE storage_format
   35                  | CREATE TABLE ID • LBRACE attr_def attr_def_list RBRACE storage_format select_stmt
   36                  | CREATE TABLE ID • AS select_stmt

    LBRACE  shift, and go to state 111
    AS      shift, and go to state 112


State 81

   31 create_index_stmt: CREATE INDEX ID • ON ID LBRACE rel_list RBRACE

    ON  shift, and go to state 113


State 82

   32 create_index_stmt: CREATE UNIQUE INDEX • ID ON ID LBRACE rel_list RBRACE

    ID  shift, and go to state 114


State 83

   28 drop_table_stmt: DROP TABLE ID •

    $default  reduce using rule 28 (drop_table_stmt)


State 84

   33 drop_index_stmt: DROP INDEX ID • ON ID

    ON  shift, and go to state 115


State 85

   85 expression: expression • '+' expression
   86           | expression • '-' expression
   87           | expression • '*' expression
   88           | expression • '/' expression
   89           | LBRACE expression • RBRACE

    RBRACE  shift, and go to state 116
    '+'     shift, and go to state 101
    '-'     shift, and go to state 102
    '*'     shift, and go to state 103
    '/'     shift, and go to state 104


State 86

   97 expression: MAX LBRACE • agg_fun_attr_list RBRACE

    ID   shift, and go to state 59
    '*'  shift, and go to state 117

    $default  reduce using rule 104 (agg_fun_attr)

    agg_fun_attr_list  go to state 118
    agg_fun_attr       go to state 119
    rel_attr           go to state 120


State 87

   98 expression: MIN LBRACE • agg_fun_attr_list RBRACE

    ID   shift, and go to state 59
    '*'  shift, and go to state 117

    $default  reduce using rule 104 (agg_fun_attr)

    agg_fun_attr_list  go to state 121
    agg_fun_attr       go to state 119
    rel_attr           go to state 120


State 88

   99 expression: COUNT LBRACE • agg_fun_attr_list RBRACE

    ID   shift, and go to state 59
    '*'  shift, and go to state 117

    $default  reduce using rule 104 (agg_fun_attr)

    agg_fun_attr_list  go to state 122
    agg_fun_attr       go to state 119
    rel_attr           go to state 120


State 89

  100 expression: AVG LBRACE • agg_fun_attr_list RBRACE

    ID   shift, and go to state 59
    '*'  shift, and go to state 117

    $default  reduce using rule 104 (agg_fun_attr)

    agg_fun_attr_list  go to state 123
    agg_fun_attr       go to state 119
    rel_attr           go to state 120


State 90

  101 expression: SUM LBRACE • agg_fun_attr_list RBRACE

    ID   shift, and go to state 59
    '*'  shift, and go to state 117

    $default  reduce using rule 104 (agg_fun_attr)

    agg_fun_attr_list  go to state 124
    agg_fun_attr       go to state 119
    rel_attr           go to state 120


State 91

   59 vector_elem: NUMBER •

    $default  reduce using rule 59 (vector_elem)


State 92

   60 vector_elem: FLOAT •

    $default  reduce using rule 60 (vector_elem)


State 93

   57 value: LBRACKET vector_elem • vector_value_list RBRACKET

    COMMA  shift, and go to state 125

    $default  reduce using rule 61 (vector_value_list)

    vector_value_list  go to state 126


State 94

   90 expression: L2_DISTANCE LBRACE • expression COMMA expression RBRACE

    LBRACE           shift, and go to state 46
    MAX              shift, and go to state 47
    MIN              shift, and go to state 48
    COUNT            shift, and go to state 49
    AVG              shift, and go to state 50
    SUM              shift, and go to state 51
    LBRACKET         shift, and go to state 52
    L2_DISTANCE      shift, and go to state 53
    COSINE_DISTANCE  shift, and go to state 54
    INNER_PRODUCT    shift, and go to state 55
    NULL_T           shift, and go to state 56
    NUMBER           shift, and go to state 57
    FLOAT            shift, and go to state 58
    ID               shift, and go to state 59
    SSS              shift, and go to state 60
    DATE             shift, and go to state 61
    '-'              shift, and go to state 62
    '*'              shift, and go to state 63

    value       go to state 64
    expression  go to state 127
    rel_attr    go to state 67


State 95

   91 expression: COSINE_DISTANCE LBRACE • expression COMMA expression RBRACE

    LBRACE           shift, and go to state 46
    MAX              shift, and go to state 47
    MIN              shift, and go to state 48
    COUNT            shift, and go to state 49
    AVG              shift, and go to state 50
    SUM              shift, and go to state 51
    LBRACKET         shift, and go to state 52
    L2_DISTANCE      shift, and go to state 53
    COSINE_DISTANCE  shift, and go to state 54
    INNER_PRODUCT    shift, and go to state 55
    NULL_T           shift, and go to state 56
    NUMBER           shift, and go to state 57
    FLOAT            shift, and go to state 58
    ID               shift, and go to state 59
    SSS              shift, and go to state 60
    DATE             shift, and go to state 61
    '-'              shift, and go to state 62
    '*'              shift, and go to state 63

    value       go to state 64
    expression  go to state 128
    rel_attr    go to state 67


State 96

   92 expression: INNER_PRODUCT LBRACE • expression COMMA expression RBRACE
